force-app/main/default/objects/Staff_Member__c/Staff_Member__c.object-meta.xml
<CustomObject>
    <label>Staff Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>