force-app/main/default/objects/Staff_Member__c/fields/Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role__c</fullName>
    <label>Employee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_Role</valueSetName>
    </valueSet>
</CustomField>