force-app/main/default/objects/Staff_Member__c/fields/Employment_ID__c.field-meta.xml
<CustomField>
    <fullName>Employment_ID__c</fullName>
    <label>Employment ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>