force-app/main/default/objects/Staff_Member__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Staff_Member__c</referenceTo>
    <relationshipLabel>Supervisor</relationshipLabel>
    <relationshipName>Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>